full refactoring of ER model to fix crucial bug